space between project photos added, fixed sidebar covering project names, added next/prev project nav back in

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -415,7 +415,8 @@ h1 {
             cursor: pointer;
 
             @include mq(m) {
-                width: 50%;
+                width: 100%;
+                margin-right:70px;
             }
 
             a {
@@ -856,9 +857,11 @@ h1 {
             font-size: $h6;
             text-transform: uppercase;
             position: relative;
+            padding-top:2.5rem;
 
             @include mq(m) {
                 max-width: 60%;
+                padding-top:1rem;
             }
 
             i {
@@ -883,7 +886,7 @@ h1 {
 
         ul {
             width: 60%;
-            display: none;
+            display: block;
             justify-content: space-between;
             align-items: center;
             background: rgba($c-black, .9);
@@ -905,10 +908,6 @@ h1 {
                 color: $c-white;
                 display: block;
                 padding: 0 .5rem;
-
-                @include mq(m) {
-                    display: none;
-                }
             }
 
             .fa-caret-left {
@@ -960,6 +959,7 @@ h1 {
     &-image {
         height: 50%;
         cursor: pointer;
+        padding:.25rem;
 
         img {
             height: 100%;
